# AdventOfCode2019

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Day1/: CMakeLists.txt  README.md  day1.cpp  day1_tests.cpp  main.cpp
Day1/Part1/: CMakeLists.txt  main.cpp
Day1/Part2/: CMakeLists.txt  main.cpp
Day2/: CMakeLists.txt  README.md  day2.cpp  day2_tests.cpp
Day2/Part1/: CMakeLists.txt  main.cpp
Day2/Part2/: CMakeLists.txt  main.cpp
Day3/: CMakeLists.txt  day3.cpp  day3_tests.cpp
Day3/Part1/: CMakeLists.txt  main.cpp
Day3/Part2/: CMakeLists.txt  main.cpp
Day4/: CMakeLists.txt  day4.cpp  day4_tests.cpp
Day4/Part1/: CMakeLists.txt  day4_part1.cpp  day4_tests_part1.cpp  main.cpp
Day4/Part2/: CMakeLists.txt  day4_part2.cpp  day4_tests_part2.cpp  main.cpp
Day5/: CMakeLists.txt  day5.cpp  day5_tests.cpp
Day5/Part1/: CMakeLists.txt  main.cpp
